# calculator-agent

./: .gitignore  README.md  main.py  pyproject.toml
docs/: STORAGE_OPTIONS.md
scripts/: verify_api.py  verify_setup.py  verify_tools.py
src/calculator_agent/agents/: calculator_agent.py
src/calculator_agent/config/: settings.py
src/calculator_agent/models/: schemas.py
src/calculator_agent/state/: memory.py
src/calculator_agent/tools/: base.py  calculator.py  memory_tools.py
src/calculator_agent/utils/: logger.py
tests/: test_tools.py
